Fixed scrollbar bug and added eye icon functionality

--- a/react-app/src/pages/StudentRosterPage/StudentRosterPage.module.css
+++ b/react-app/src/pages/StudentRosterPage/StudentRosterPage.module.css
@@ -46,3 +46,7 @@
   align-items: center;
   text-align: center;
 }
+
+html {
+  overflow-y: overlay;
+}
